<resources>
    <string name="app_name">Project 2</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="about_me">About Me</string>
    <string name="movie_list">My Movie List</string>
    <string name="movie_details">Movie Details</string>
    <string name="jason_worrell_n_jsworrell_syr_edu">Jason Worrell \n jsworrell@syr.edu</string>
    <string name="image_of_jason_worrell">Image of Jason Worrell</string>
    <string name="jason_worrell">Jason Worrell</string>
    <string name="name">Name</string>
    <string name="ca">CA</string>
    <string name="current_state">Current State</string>
    <string name="nc">NC</string>
    <string name="home_state">Home State</string>
    <string name="prosuper">ProSuper</string>
    <string name="occupation">Occupation</string>
    <string name="_42">42</string>
    <string name="age">Age:</string>
    <string name="intro">Hello All! I am Jason Worrell, I have been enlisted in the United States Air Force for the last 21 years. This has taken me to many places and introduced me to many people and ideas. In this app you will find I have told a little bit about my self and the kinds of movies that I enjoy watching. I hope this list finds you well and that you enjoy some of thes films as much as I have.</string>
    <string name="movie_images">Movie Images</string>
    <string name="star_image">Star Image</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="bullock">A young female hacker awakens from a traumatic event that she scarcely remembers, and an iPhone glued to her hand. On the phone, a countdown is ticking away to zero. What happens at zero? Who is she, and why has she become an extension of the device? As the minutes tick away, our heroine must race against time to put the pieces together before the mysterious, pending zero-hour strikes</string>
</resources>