<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="377dp"
        android:layout_height="230dp"
        android:layout_marginBottom="444dp"
        android:background="#99808080"
        android:paddingHorizontal="@dimen/table_horizontal"
        android:paddingVertical="@dimen/table_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/name"
                android:textStyle="bold" />

            <TextView
                android:layout_width="271dp"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/jason_worrell"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="160dp"
            tools:ignore="UselessParent">

            <TextView
                android:padding="3dip"
                android:text="@string/age"
                android:textStyle="bold" />

            <TextView
                android:padding="3dip"
                android:text="@string/_42"
                android:textStyle="bold" />
        </TableRow>

        <TableRow

            android:layout_width="160dp"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="0dp"
                android:padding="3dip"
                android:text="@string/occupation"
                android:textStyle="bold" />

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:text="@string/prosuper"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="160dp"
            tools:ignore="UselessParent">

            <TextView
                android:padding="3dip"
                android:text="@string/home_state"
                android:textStyle="bold" />

            <TextView
                android:padding="3dip"
                android:text="@string/nc"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="160dp"
            tools:ignore="UselessParent">

            <TextView
                android:padding="3dip"
                android:text="@string/current_state"
                android:textStyle="bold" />

            <TextView
                android:padding="3dip"
                android:text="@string/ca"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="184dp"
        android:layout_height="223dp"
        android:layout_gravity="right"
        android:layout_marginBottom="452dp"
        android:contentDescription="@string/image_of_jason_worrell"
        android:paddingTop="@dimen/me_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.929"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/jason"
        tools:ignore="MissingConstraints,RtlHardcoded,RtlSymmetry" />

    <TextView
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="188dp"
        android:background="#99808080"
        android:paddingHorizontal="@dimen/para_horizontal"
        android:paddingVertical="@dimen/para_vertical"
        android:text="@string/intro"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>